# FileViewer

./: .gitignore  README.md  excel_data_view.py  image_to_text.py
app_server/: Billing.ui  main.py  pyproject.toml  requirement.txt  ui_Billing.py
app_server/ModalClass/: modal.py
app_server/templates/: base.html  create.html  template.html
app_server/templates/css/: style.css
app_server/templates/js/: create.js
app_server/uploads/: AWS Cloud Engineering and Automation Services -SS- July 2023 (2).xlsx  DEV-1-data.xlsx  Drift Report - Consildated.xlsx  Drift Report.xlsx  base.html  data12.xlsx  example.html  index.html  index_minified.html  json_data.json  leave_management.xlsx  output.json  output111.json  output12.json  output_15th.json  output_format.json  output_new.json  sample.html  sample.json  sample1.json  success.json  test 2.py  test.py  update-user.json
app_server/utility/: file_read.py  modal.py  test.py
frontend-app/: package-lock.json  package.json  vue.config.js
frontend-app/src/: App.vue  main.js
frontend-app/src/assets/js/: jsoneditor.js
frontend-app/src/router/: index.js
frontend-app/src/views/: HomeView.vue  JsonAnalyseView copy.vue  JsonAnalyseView.vue  JsonDataView.vue  JsonEditView.vue
