[tool.poetry]
name = "app-server"
version = "0.1.0"
description = "File view and create"
authors = ["Vimit <talk2vimit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
Jinja2 = "^3.1.3"
uvicorn = "^0.27.1"
aiofiles = "^23.2.1"
python-multipart = "^0.0.9"
pandas = "^2.2.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
